# unchained

./: .gitattributes  .gitignore  ARCHITECTURE.md  COMPLETED_FEATURES.md  Cargo.toml  DEPLOYMENT_GUIDE.md  HTLC_CLI_GUIDE.md  PQS_Blockchain_Research_Paper.md  PQ_OFFLINE_RECEIVE_MODE.md  QUICK_REFERENCE.md  README.md  SHIELDED_POOL_V1.md  STATE_OF_UNCHAINED_TASKLIST.md  TECHNICAL_OVERVIEW.md  aucition.md  build-release.sh  build.rs  config.send-test.toml  config.toml  context.md  critical_peer_review.md  decode_coins  network_dili.key  node_kyber.enc  notes.md  paper.md  paycode.txt  pq_identity.enc  pqs_blockchain_research_paper.tex  rust3  rusty.txt  rustyy.txt  send_interactive.sh  setup_node.sh  staking.md  sync_debug_analysis.md  test_network.sh  test_sync.sh  tmp  tmp.rs  (+8 more)
.cargo/: config.toml
.github/workflows/: ci.yml  mint-proof-fixtures.yml  release-binaries.yml  release.yml
.test_chain_data/: 000038.sst  000039.sst  IDENTITY  LOG  LOG.old.1755591496382920  MANIFEST-000041  OPTIONS-000043
data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000017  OPTIONS-000033
docs/: deepbook_integration.md
methods/: Cargo.toml
methods/checkpoint-guest/: Cargo.toml
methods/checkpoint-guest/src/: main.rs
methods/claim-guest/: Cargo.toml
methods/claim-guest/src/: main.rs
methods/delegation-guest/: Cargo.toml
methods/delegation-guest/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/undelegation-guest/: Cargo.toml
methods/undelegation-guest/src/: main.rs
proof-core/: Cargo.toml
proof-core/src/: lib.rs  proof_hash.rs
src/: app.rs  bridge.rs  canonical.rs  coin.rs  config.rs  consensus.rs  crypto.rs  discovery.rs  epoch.rs  epoch.rs.bak  evidence.rs  external_asset.rs  ingress.rs  lib.rs  local_control.rs  main.rs  main.rs.bak  metrics.rs  miner.rs  network.rs  network.rs.bak  node_control.rs  node_identity.rs  offers.rs  phd.md  proof.rs  proof_assistant.rs  protocol.rs  research.md  ring_transfer.rs  ringsig.rs  rpc.rs  runtime_profile.rs  settlement_unit.rs  shielded.rs  staking.rs  storage.rs  sync.rs  sync.rs.bak  transaction.rs  (+5 more)
src/proof/: native_transfer.rs
tests/: adversarial_tests.rs  blockchain_tests.rs  cli_regression_tests.rs  coin_tests.rs  crypto_tests.rs  epoch_tests.rs  finality_support.rs  integration_tests.rs  merkle_proof_security_tests.rs  merkle_proof_tests.rs  node_control.rs  pow_tests.rs  pq_network.rs  shielded_pool.rs  shielded_tx_flow.rs  staking_transactions.rs  storage_tests.rs  transfer_integration_tests.rs  wallet_control.rs  wallet_tests.rs
unchained-gui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
unchained-gui/src/: App.css  App.tsx
unchained-gui/src-tauri/: Cargo.toml  tauri.conf.json
unchained-gui/src-tauri/src/: lib.rs
unchained-tauri/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
unchained-tauri/src/: App.tsx
unchained-tauri/src-tauri/: .taurignore  Cargo.toml
unchained-tauri/src-tauri/src/: lib.rs  test_resolve.rs
unchained-tauri/src/components/: Dashboard.tsx  Mining.tsx  Network.tsx  Onboarding.tsx  Settings.tsx  Transfer.tsx  Wallet.tsx
unchained-tauri/src/hooks/: useBlockchain.ts
unchained-tauri/src/types/: blockchain.ts
unchained-ui/: package-lock.json  package.json  vite.config.ts
unchained-ui/src/: App.tsx  index.css
unchained-ui/src-tauri/: Cargo.toml  tauri.conf.json
unchained-ui/src-tauri/src/: lib.rs  main.rs  test_resolve.rs
unchained-ui/src/components/: Dashboard.tsx  Mining.tsx  Network.tsx  Onboarding.tsx  Settings.tsx  Transfer.tsx  Wallet.tsx
unchained-ui/src/components/ui/: input.tsx  table.tsx
unchained-ui/src/hooks/: useBlockchain.ts
unchained-ui/src/types/: blockchain.ts
wiki/: Argon2id.md  BLAKE3.md  Dilithium3.md  Kyber768.md  Prometheus.md  README.md  RocksDB.md  Rust.md  Rustls.md  Tokio.md  libp2p.md
