[package]
name = "unchained"
version = "1.0.0"
edition = "2021"
autobins = false

# Post-quantum cryptography is enabled via rustls features in dependencies

[build-dependencies]
cc = "1"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
subtle = "2.5"
argon2 = "0.5"
rand = "0.8"
chacha20poly1305 = { version = "0.9.1" }
rpassword = "7"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
libp2p = { git = "https://github.com/guorong009/rust-libp2p", branch = "prefer-post-quantum", default-features = false, features = ["quic", "tokio", "gossipsub", "macros", "request-response", "json"] }
rocksdb = "0.21"
prometheus = "0.13"
futures = "0.3"
anyhow = "1.0"
toml = "0.8"
bincode = "1.3"
zstd = "0.13"
hex = "0.4"
tiny_http = "0.12"
serde-big-array = "0.5"
# Using QUIC with post-quantum preference; remove unused libp2p subcrates to avoid version conflicts
ml-kem = "0.2.1"
# Post-quantum KEM (Kyber768) for stealth outputs
pqcrypto-kyber = "0.8"
# AEAD for encrypting one-time secret keys in stealth outputs
aes-gcm-siv = "0.11"
base64 = "0.22"
qrcode = "0.14"
arboard = "3.4"
# Dependencies for TLS certificate generation and post-quantum cryptography
rcgen = "0.13"
rustls = { version = "0.23.22", default-features = false, features = ["aws-lc-rs", "prefer-post-quantum"] }
webpki-roots = "0.26"
tokio-rustls = "0.26"
chrono = { version = "0.4", features = ["serde"] }
postcard = "1.1.3"
bytes = "1.10.1"
log = "0.4.27"
serde_bytes = "0.11.17"
once_cell = "1.19"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }

# HTTP client for Sui RPC verification (TLS via rustls)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

hickory-resolver = { version = "=0.25.0-alpha.4", default-features = false, features = ["tokio-runtime"] }
hickory-proto = "=0.25.0-alpha.4"
hickory-client = "=0.25.0-alpha.4"
zeroize = "1.8.1"
# liboqs removed; no runtime oqs dependency

[features]
default = []

[[bin]]
name = "unchained"
path = "src/main.rs"

[[bin]]
name = "inspect_db"
path = "src/bin/inspect_db.rs"

[[bin]]
name = "wallet_cf"
path = "src/bin/wallet_cf.rs"

[[bin]]
name = "fix_fork"
path = "src/bin/fix_fork.rs"

[[bin]]
name = "resync_after_rollback"
path = "src/bin/resync_after_rollback.rs"

[[bin]]
name = "list_epochs"
path = "src/bin/list_epochs.rs"


[dev-dependencies]
tempfile = "3.8"
