[package]
name = "unchained"
version = "1.0.0"
edition = "2021"
autobins = false

[workspace]
members = ["methods", "proof-core"]
resolver = "2"

[patch.crates-io]
risc0-circuit-rv32im-sys = { path = "vendor/risc0-circuit-rv32im-sys" }
risc0-sys = { path = "vendor/risc0-sys" }
risc0-zkp = { path = "vendor/risc0-zkp" }

# Post-quantum cryptography is enabled via rustls features in dependencies

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
argon2 = "0.5"
rand = "0.8"
chacha20poly1305 = { version = "0.9.1" }
serde = { version = "1.0", features = ["derive"] }
quinn = { version = "0.11.8", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
rocksdb = "0.21"
anyhow = "1.0"
bincode = "1.3"
zstd = "0.13"
hex = "0.4"
serde-big-array = "0.5"
ml-kem = { version = "0.2.1", features = ["deterministic"] }
# Finalized NIST ML-KEM for wallet and asset-layer key encapsulation
base64 = "0.22"
# Dependencies for TLS and post-quantum cryptography
rustls = { version = "0.23.22", default-features = false, features = ["aws-lc-rs", "prefer-post-quantum"] }
aws-lc-rs = { version = "1.13.3", features = ["unstable"] }
serde_json = "1.0"
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std", "disable-dev-mode"] }
methods = { path = "methods", optional = true }
proof-core = { path = "proof-core" }
chalamet_pir = "0.6.0"

zeroize = "1.8.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
# liboqs removed; no runtime oqs dependency

[features]
default = []
local-prover = ["dep:methods", "risc0-zkvm/prove"]

[[bin]]
name = "unchained_node"
path = "src/bin/unchained_node.rs"

[[bin]]
name = "unchained_wallet"
path = "src/bin/unchained_wallet.rs"

[[bin]]
name = "unchained_proof_assistant"
path = "src/bin/unchained_proof_assistant.rs"
required-features = ["local-prover"]

[[bin]]
name = "inspect_db"
path = "src/bin/inspect_db.rs"

[[bin]]
name = "list_epochs"
path = "src/bin/list_epochs.rs"


[dev-dependencies]
tempfile = "3.8"
