[package]
name = "proof-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
bincode = "1.3"
chacha20poly1305 = { version = "0.9.1" }
ml-kem = { version = "0.2.1", features = ["deterministic"] }
serde = { version = "1.0", features = ["derive"] }
winter-crypto = "0.13.1"
winter-math = "0.13.1"
