[package]
name = "unchainedcoin-ui"
version = "0.1.0"
description = "UnchainedCoin Desktop UI"
authors = ["UnchainedCoin Team"]
edition = "2021"

[lib]
name = "unchainedcoin_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
hex = "0.4"

# UnchainedCoin dependencies
unchainedcoin = { path = "../.." }
blake3 = "1.5"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

