[package]
name = "unchainedcoin-ui"
version = "0.1.0"
description = "unchained Desktop UI"
authors = ["unchained Team"]
edition = "2021"

[lib]
name = "unchainedcoin_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tauri = { version = "2.0.0-beta.25", features = [] }
tokio = { version = "1.25.0", features = ["full"] }
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["serde"] }

unchainedcoin = { path = "../../" }
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4"] }
bincode = "1.3.3"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

